[package]
name = "from-regex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from-regex-macros = { path = "./from-regex-macros" }

regex = "*"
lazy_static = "*"

[workspace]
members = [
    "from-regex-macros"
]