[package]
name = "from-regex"
description = "Derive deserialization of structs and enums from regex patterns"
version = "0.2.0"
edition = "2018"

authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
documentation = "https://docs.rs/from-regex"
repository = "https://github.com/ecclarke42/from-regex"
license = "MIT"
readme = "README.md"
keywords = ["regex", "derive"]
categories = ["parsing", "text-processing"]

[dependencies]
from-regex-macros = "0.2"
rangemap = { git = "https://github.com/ecclarke42/rangemap" }
regex = "1"
lazy_static = "1"

[workspace]
members = [
    "from-regex-macros"
]