[package]
name = "from-regex-macros"
description = "Macros for the from-regex crate"
version = "0.1.0"
edition = "2018"

authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
documentation = "https://docs.rs/from-regex-macros"
repository = "https://github.com/ecclarke42/from-regex"
license = "MIT"

keywords = ["regex", "derive"]
categories = ["parsing", "text-processing"]

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
lazy_static = "1.4"
proc-macro2 = "1"
quote = "1"
regex = "1.5"
syn = { version = "1", features = ["full"] }